Fixed figcaption low contrast

--- a/css/main.css
+++ b/css/main.css
@@ -376,7 +376,7 @@
 
     .article-wide figcaption {
       font-size: 0.8rem;
-      color: #888888;
+      color: #757575;
       padding: 0.5rem;
     }
 
